--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>vn.ds.study</groupId>
     <artifactId>wso2mi-gcs-connector</artifactId>
-    <version>1.0.16</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>wso2mi-gcs-connector</name>
     <url>https://wso2.org</url>
 
     <properties>
         <connector.name>minio</connector.name>
-        <connector.version>${version}</connector.version>
+        <connector.version>${project.version}</connector.version>
         <integration.base.version>1.0.2</integration.base.version>
         <product.ei.version>6.1.1</product.ei.version>
         <carbon.kernel.version>4.4.17</carbon.kernel.version>
@@ -238,7 +238,7 @@
                         <id>create-archive</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>attached</goal>
+                            <goal>single</goal>
                         </goals>
                         <configuration>
                             <finalName>${connector.name}-connector-${connector.version}</finalName>
