--- a/.github/workflows/maven.publish.yml
+++ b/.github/workflows/maven.publish.yml
@@ -61,6 +61,6 @@ jobs:
                     GITHUB_TOKEN: ${{ github.token }}
                 with:
                     upload_url: ${{ steps.create_release.outputs.upload_url }}
-                    asset_path: ./target/minio-connector-${{ steps.project_version.outputs.version }}.zip
-                    asset_name: minio-connector-${{ steps.project_version.outputs.version }}.zip
+                    asset_path: ./target/gcs-connector-${{ steps.project_version.outputs.version }}.zip
+                    asset_name: gcs-connector-${{ steps.project_version.outputs.version }}.zip
                     asset_content_type: application/zip
