--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,10 @@
                         <goals>
                             <goal>copy</goal>
                         </goals>
+
                         <configuration>
+                            <outputDirectory>${project.build.directory}/connector/dependencies</outputDirectory>
+                            <!--                            <overWriteIfNewer>true</overWriteIfNewer>-->
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.apache.commons</groupId>
@@ -327,10 +330,197 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.google.cloud</groupId>
+                                    <artifactId>grpc-gcp</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.cloud</groupId>
+                                    <artifactId>google-cloud-core</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.cloud</groupId>
                                     <artifactId>google-cloud-storage</artifactId>
                                     <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>target/connector/dependencies</outputDirectory>
+                                </artifactItem>
+
+                                <artifactItem>
+                                    <groupId>com.google.cloud</groupId>
+                                    <artifactId>google-cloud-core-http</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.apis</groupId>
+                                    <artifactId>google-api-services-storage</artifactId>
+                                    <version>v1-rev20231028-2.0.0</version>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.auto.value</groupId>
+                                    <artifactId>auto-value-annotations</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.graalvm.sdk</groupId>
+                                    <artifactId>graal-sdk</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.auth</groupId>
+                                    <artifactId>google-auth-library-oauth2-http</artifactId>
+                                    <type>jar</type>
+                                    <type>test-jar</type>
+                                    <classifier>testlib</classifier>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.code.gson</groupId>
+                                    <artifactId>gson</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api</groupId>
+                                    <artifactId>api-common</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api</groupId>
+                                    <artifactId>gapic-generator-java</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>grpc-google-common-protos</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>proto-google-common-protos</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>proto-google-iam-v1</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>proto-google-iam-v2</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>proto-google-iam-v2beta</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>grpc-google-iam-v1</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>grpc-google-iam-v2</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.api.grpc</groupId>
+                                    <artifactId>grpc-google-iam-v2beta</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.auth</groupId>
+                                    <artifactId>google-auth-library-credentials</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.auth</groupId>
+                                    <artifactId>google-auth-library-oauth2-http</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.auth</groupId>
+                                    <artifactId>google-auth-library-appengine</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-android</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-apache-v2</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-appengine</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-findbugs</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-gson</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-jackson2</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-protobuf</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-test</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.http-client</groupId>
+                                    <artifactId>google-http-client-xml</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>guava</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>guava-gwt</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>guava-testlib</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.protobuf</groupId>
+                                    <artifactId>protobuf-java</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.protobuf</groupId>
+                                    <artifactId>protobuf-java-util</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.protobuf</groupId>
+                                    <artifactId>protobuf-kotlin</artifactId>
+                                    <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.squareup.okhttp3</groupId>
