--- a/.github/workflows/maven.publish.yml
+++ b/.github/workflows/maven.publish.yml
@@ -38,11 +38,6 @@ jobs:
             -   name: Build with Maven
                 run: mvn -B package --file pom.xml
 
-            -   name: Publish to GitHub Packages Apache Maven
-                run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-                env:
-                    GITHUB_TOKEN: ${{ github.token }}
-
             -   name: Release
                 uses: actions/create-release@v1
                 id: create_release
@@ -53,7 +48,7 @@ jobs:
                     tag_name: ${{ github.ref }}
                     body_path: CHANGELOG.md
                 env:
-                    GITHUB_TOKEN: ${{ github.token }}
+                    GITHUB_TOKEN: ${{ secrets.BUILD_TOKEN }}
 
             -   name: Upload artifact
                 uses: actions/upload-release-asset@v1
