--- a/.github/workflows/maven.publish.yml
+++ b/.github/workflows/maven.publish.yml
@@ -1,28 +1,14 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
-
 on:
     push:
         tags: [ '*.*.*' ]
-
-env:
-    # Use docker.io for Docker Hub if empty
-    REGISTRY: docker.io
-
 jobs:
     build_connector:
-
         runs-on: ubuntu-latest
         permissions:
             contents: read
             packages: write
-
         steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v2
-
             -   name: Set up JDK 11
                 uses: actions/setup-java@v2
                 with:
@@ -30,6 +16,9 @@ jobs:
                     distribution: 'temurin'
                     server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
                     settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+            -   name: Checkout repository
+                uses: actions/checkout@v2
 
             -   name: Extract Maven project version
                 run: echo ::set-output name=version::$(mvn org.apache.maven.plugins:maven-help-plugin:evaluate -Dexpression=project.version -q -DforceStdout)
@@ -41,14 +30,14 @@ jobs:
             -   name: Release
                 uses: actions/create-release@v1
                 id: create_release
+                env:
+                    GITHUB_TOKEN: ${{ github.token }}
                 with:
                     draft: false
                     prerelease: false
                     release_name: v${{ steps.project_version.outputs.version }}
                     tag_name: ${{ github.ref }}
                     body_path: CHANGELOG.md
-                env:
-                    GITHUB_TOKEN: ${{ secrets.BUILD_TOKEN }}
 
             -   name: Upload artifact
                 uses: actions/upload-release-asset@v1
