--- a/.github/workflows/maven.publish.yml
+++ b/.github/workflows/maven.publish.yml
@@ -1,50 +1,50 @@
 name: Maven Package
 on:
-    push:
-        tags: [ '*.*.*' ]
+  push:
+    tags: [ '*.*.*' ]
 jobs:
-    build_connector:
-        runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            packages: write
-        steps:
-            -   name: Set up JDK 11
-                uses: actions/setup-java@v2
-                with:
-                    java-version: '11'
-                    distribution: 'temurin'
-                    server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-                    settings-path: ${{ github.workspace }} # location for the settings.xml file
+  build_connector:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-            -   name: Checkout repository
-                uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-            -   name: Extract Maven project version
-                run: echo ::set-output name=version::$(mvn org.apache.maven.plugins:maven-help-plugin:evaluate -Dexpression=project.version -q -DforceStdout)
-                id: project_version
+      - name: Extract Maven project version
+        run: echo ::set-output name=version::$(mvn org.apache.maven.plugins:maven-help-plugin:evaluate -Dexpression=project.version -q -DforceStdout)
+        id: project_version
 
-            -   name: Build with Maven
-                run: mvn -B package --file pom.xml
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-            -   name: Release
-                uses: actions/create-release@v1
-                id: create_release
-                env:
-                    GITHUB_TOKEN: ${{ github.token }}
-                with:
-                    draft: false
-                    prerelease: false
-                    release_name: v${{ steps.project_version.outputs.version }}
-                    tag_name: ${{ github.ref }}
-                    body_path: CHANGELOG.md
+      - name: Release
+        uses: actions/create-release@v1
+        id: create_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PACKAGE_REGISTRY_TOKEN }}
+        with:
+          draft: false
+          prerelease: false
+          release_name: v${{ steps.project_version.outputs.version }}
+          tag_name: ${{ github.ref }}
+          body_path: CHANGELOG.md
 
-            -   name: Upload artifact
-                uses: actions/upload-release-asset@v1
-                env:
-                    GITHUB_TOKEN: ${{ github.token }}
-                with:
-                    upload_url: ${{ steps.create_release.outputs.upload_url }}
-                    asset_path: ./target/gcs-connector-${{ steps.project_version.outputs.version }}.zip
-                    asset_name: gcs-connector-${{ steps.project_version.outputs.version }}.zip
-                    asset_content_type: application/zip
+      - name: Upload artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PACKAGE_REGISTRY_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./target/gcs-connector-${{ steps.project_version.outputs.version }}.zip
+          asset_name: gcs-connector-${{ steps.project_version.outputs.version }}.zip
+          asset_content_type: application/zip
